<resources>
    <string name="app_name">CECS</string>
    <string name="todo">description</string>
    <string name="login">Login</string>
    <string name="create_account">Create Account</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="app_phone">Phone Number</string>
    <string name="app_email">Email</string>
    <string name="app_retype_password">Retype Password</string>
    <string name="app_password">Password</string>
    <string name="app_sign_me_up_btn">Sign Me Up</string>
    <string name="take_quiz">Take Quiz</string>
    <string name="option">Option</string>
    <string name="logout">Logout</string>
    <string name="highscore">Highscore: 0</string>
    <string name="newPassword">Type New Password</string>
</resources>
